--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.png"> 
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta
       name="description"
       content="Web site created using create-react-app"
