--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
       content="Web site created using create-react-app"
     />
     <title>YouTube</title>
+    <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-gothic.css" rel="stylesheet">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
   </head>
   <body>
